--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -59,7 +59,7 @@ header ul li a{
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url(/public/assets/images/logo.png);
+    background-image: url(/assets/images/logo.png);
     background-size: cover;
 }
 
